Fix header margin on mobile, fix heading color, fix projhect feature image size

--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -10,6 +10,7 @@
   transition: transform $base-duration $base-timing;
 
   background: $bg-color;
+  color: $grey-0;
   font-family: $heading-font-family;
   font-size: font-size(0);
   text-transform: uppercase;
