--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -20,19 +20,13 @@
 @import "variables/variables";
 @import "base/base";
 
-// body {
-//   display: flex;
-//   flex-flow: column;
+main {
+  margin-top: $header-height * .8;
 
-//   > main {
-//     flex: 1;
-//     margin-top: $header-height;
-
-//     @include mq($min-width: $tablet-landscape) {
-//       margin-top: 0;
-//     }
-//   }
-// }
+  @include mq($min-width: $tablet-landscape) {
+    margin-top: 0;
+  }
+}
 
 @import "partials/footer";
 @import "partials/header";
