--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -10,7 +10,7 @@ $white: #fff;
 
 // Font Colors
 $text-color: $grey--1;
-$heading-color: $black;
+$heading-color: $text-color;
 $action-color: $blue;
 
 // Background Colors
